--- a/sss.yaml
+++ b/sss.yaml
@@ -52,10 +52,6 @@ route:
 outbounds:
   - { tag: 🚀 节点选择, type: selector, interrupt_exist_connections: true, outbounds: [ ♻️ 自动选择, 🟢 手动选择 ], filter: [ { action: all, keywords: '' } ] }
   - { tag: 🟢 手动选择, type: selector, interrupt_exist_connections: true, outbounds: [], filter: [ { action: all, keywords: '' } ] }
-  - { tag: 🎯 全球直连, type: selector, interrupt_exist_connections: true, outbounds: [ 🎯 全局直连, 🚀 节点选择, 🟢 手动选择, ♻️ 自动选择 ] }
-  - { tag: 🪧 广告拦截, type: selector, interrupt_exist_connections: true, outbounds: [ 🚫 拒绝连接, 🎯 全局直连, 🚀 节点选择 ] }
-  - { tag: 💧 泄漏拦截, type: selector, interrupt_exist_connections: true, outbounds: [ 🚫 拒绝连接, 🎯 全局直连, 🚀 节点选择 ] }
-  - { tag: 🔎 HttpDNS, type: selector, interrupt_exist_connections: true, outbounds: [ 🚫 拒绝连接, 🎯 全局直连, 🚀 节点选择 ] }
   - { tag: ♻️ 自动选择, type: urltest, interrupt_exist_connections: true, url: https://www.gstatic.com/generate_204, interval: 3m, tolerance: 150, outbounds: [], filter: [ { action: all, keywords: '' } ] }
   - { tag: 🍎 Apple, type: selector, interrupt_exist_connections: true, outbounds: [ 🟢 手动选择, ♻️ 自动选择 ], filter: [ { action: all, keywords: '' } ] }
   - { tag: 🪟 Microsoft, type: selector, interrupt_exist_connections: true, outbounds: [ 🟢 手动选择, ♻️ 自动选择 ], filter: [ { action: all, keywords: '' } ] }
@@ -65,6 +61,10 @@ outbounds:
   - { tag: 🎵 TikTok, type: selector, interrupt_exist_connections: true, outbounds: [ 🟢 手动选择, ♻️ 自动选择 ], filter: [ { action: all, keywords: '' } ] }
   - { tag: 🎥 Netflix, type: selector, interrupt_exist_connections: true, outbounds: [ 🟢 手动选择, ♻️ 自动选择 ], filter: [ { action: all, keywords: '' } ] }
   - { tag: 📲 Telegram, type: selector, interrupt_exist_connections: true, outbounds: [ 🟢 手动选择, ♻️ 自动选择 ], filter: [ { action: all, keywords: '' } ] }
+  - { tag: 🎯 全球直连, type: selector, interrupt_exist_connections: true, outbounds: [ 🎯 全局直连, 🚀 节点选择 ] }
+  - { tag: 🪧 广告拦截, type: selector, interrupt_exist_connections: true, outbounds: [ 🚫 拒绝连接, 🎯 全局直连, 🚀 节点选择 ] }
+  - { tag: 💧 泄漏拦截, type: selector, interrupt_exist_connections: true, outbounds: [ 🚫 拒绝连接, 🎯 全局直连, 🚀 节点选择 ] }
+  - { tag: 🔎 HttpDNS, type: selector, interrupt_exist_connections: true, outbounds: [ 🚫 拒绝连接, 🎯 全局直连, 🚀 节点选择 ] }
   ############ 全国家分组自动选择 ############
   - { tag: 🇺🇸 美国自动, type: urltest, interrupt_exist_connections: true, url: https://www.gstatic.com/generate_204, interval: 3m, tolerance: 150, outbounds: [], filter: [ { action: include, keywords: "(?i)(?:🇺🇸|(?:^|[\\s_-])(US)(?:(?=$|[\\s_-])|(?:[-_0-9]+(?=$|[\\s_-])))|(?:^|[\\s_-])[-_0-9]*US(?=$|[\\s_-])|美国|United States|(?:(?:^|[\\s_-])CT(?=$|[\\s_-]))|UnitedStates)" } ] }
   
