--- a/sss.yaml
+++ b/sss.yaml
@@ -17,8 +17,9 @@ route:
     - { rule_set: [ ads_domain ], outbound: 🪧 广告拦截 }
     - { type: logical, mode: or, rules: [ { port: [ 3478 ] }, { network: [ tcp ], port: [ 5349 ] }, { network: [ udp ], port: [ 5350, 5351, 19302 ] }, { rule_set: [ stun_domain ] } ], outbound: 💧 泄漏拦截 }
     - { rule_set: [ blockhttpdns_domain ], outbound: 🔎 HttpDNS }
-    - { rule_set: [ cn_domain ], outbound: 🎯 全局直连 }
     - { rule_set: [ microsoft_domain ], outbound: 🪟 Microsoft }
+    - { rule_set: [ x_domain ], outbound: ✖️ X }
+    - { rule_set: [ instagram_domain ], outbound: 🌄 Instagram }
     - { rule_set: [ ai_domain ], outbound: 🤖 AI }
     - { rule_set: [ youtube_domain ], outbound: 📹 YouTube }
     - { rule_set: [ tiktok_domain ], outbound: 🎵 TikTok }
@@ -26,35 +27,40 @@ route:
     - { rule_set: [ netflix_domain, netflix_ip ], outbound: 🎥 Netflix }
     - { rule_set: [ apple_domain, apple_ip ], outbound: 🍎 Apple }
     - { rule_set: [ google_domain, google_ip ], outbound: 🔍 Google }
+    - { rule_set: [ cn_domain ], outbound: 🎯 全局直连 }
     - { action: resolve }
-    - { type: logical, mode: or, rules: [ { type: logical, mode: and, rules: [ { rule_set: [ cn_domain ] }, { rule_set: [ cn_ip ] } ] }, { rule_set: [ cn_ip ] }, { rule_set: [ private_domain, private_ip ] } ], outbound: 🎯 全球直连 }
+    - { rule_set: [ cn_ip ], outbound: 🎯 全局直连 }
   rule_set:
     # MetaCubeX 规则集
-    - { tag: ads_domain, type: remote, format: source, url: https://jsd.onmicrosoft.cn/gh/TG-Twilight/AWAvenue-Ads-Rule@main/Filters/AWAvenue-Ads-Rule-Singbox.json, download_detour: 🎯 全球直连 }
-    - { tag: ai_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/category-ai-!cn.srs, download_detour: 🎯 全球直连 }
-    - { tag: youtube_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/youtube.srs, download_detour: 🎯 全球直连 }
-    - { tag: google_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/google.srs, download_detour: 🎯 全球直连 }
-    - { tag: telegram_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/telegram.srs, download_detour: 🎯 全球直连 }
-    - { tag: tiktok_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/tiktok.srs, download_detour: 🎯 全球直连 }
-    - { tag: netflix_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/netflix.srs, download_detour: 🎯 全球直连 }
-    - { tag: apple_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/apple.srs, download_detour: 🎯 全球直连 }
-    - { tag: microsoft_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/microsoft.srs, download_detour: 🎯 全球直连 }
-    - { tag: private_domain, type: remote, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/private.srs, format: binary, download_detour: 🎯 全球直连 }
-    - { tag: private_ip, type: remote, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geoip/private.srs, format: binary, download_detour: 🎯 全球直连 }    
-    - { tag: google_ip, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geoip/google.srs, download_detour: 🎯 全球直连 }
-    - { tag: telegram_ip, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geoip/telegram.srs, download_detour: 🎯 全球直连 }
-    - { tag: netflix_ip, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geoip/netflix.srs, download_detour: 🎯 全球直连 }
-    - { tag: apple_ip, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geoip/apple.srs, download_detour: 🎯 全球直连 }
-    - { tag: cn_domain, type: remote, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/cn.srs, format: binary, download_detour: 🎯 全球直连 }
-    - { tag: cn_ip, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geoip/cn.srs, download_detour: 🎯 全球直连 }
+    - { tag: ads_domain, type: remote, format: source, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/category-ads-all.srs, download_detour: 🎯 全局直连 }
+    - { tag: x_domain, type: remote, format: source, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/x.srs, download_detour: 🎯 全局直连 }
+    - { tag: instagram_domain, type: remote, format: source, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/instagram.srs, download_detour: 🎯 全局直连 }
+    - { tag: ai_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/category-ai-!cn.srs, download_detour: 🎯 全局直连 }
+    - { tag: youtube_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/youtube.srs, download_detour: 🎯 全局直连 }
+    - { tag: google_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/google.srs, download_detour: 🎯 全局直连 }
+    - { tag: telegram_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/telegram.srs, download_detour: 🎯 全局直连 }
+    - { tag: tiktok_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/tiktok.srs, download_detour: 🎯 全局直连 }
+    - { tag: netflix_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/netflix.srs, download_detour: 🎯 全局直连 }
+    - { tag: apple_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/apple.srs, download_detour: 🎯 全局直连 }
+    - { tag: microsoft_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/microsoft.srs, download_detour: 🎯 全局直连 }
+    - { tag: private_domain, type: remote, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/private.srs, format: binary, download_detour: 🎯 全局直连 }
+    - { tag: private_ip, type: remote, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geoip/private.srs, format: binary, download_detour: 🎯 全局直连 }    
+    - { tag: google_ip, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geoip/google.srs, download_detour: 🎯 全局直连 }
+    - { tag: telegram_ip, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geoip/telegram.srs, download_detour: 🎯 全局直连 }
+    - { tag: netflix_ip, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geoip/netflix.srs, download_detour: 🎯 全局直连 }
+    - { tag: apple_ip, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geoip/apple.srs, download_detour: 🎯 全局直连 }
+    - { tag: cn_domain, type: remote, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/cn.srs, format: binary, download_detour: 🎯 全局直连 }
+    - { tag: cn_ip, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geoip/cn.srs, download_detour: 🎯 全局直连 }
     # senshinya 规则集
-    - { tag: stun_domain, type: remote, url: https://jsd.onmicrosoft.cn/gh/senshinya/singbox_ruleset@main/rule/STUN/STUN.srs, format: binary, download_detour: 🎯 全球直连 }
-    - { tag: blockhttpdns_domain, type: remote, url: https://jsd.onmicrosoft.cn/gh/senshinya/singbox_ruleset@main/rule/BlockHttpDNS/BlockHttpDNS.srs, format: binary, download_detour: 🎯 全球直连 }
+    - { tag: stun_domain, type: remote, url: https://jsd.onmicrosoft.cn/gh/senshinya/singbox_ruleset@main/rule/STUN/STUN.srs, format: binary, download_detour: 🎯 全局直连 }
+    - { tag: blockhttpdns_domain, type: remote, url: https://jsd.onmicrosoft.cn/gh/senshinya/singbox_ruleset@main/rule/BlockHttpDNS/BlockHttpDNS.srs, format: binary, download_detour: 🎯 全局直连 }
 outbounds:
   - { tag: 🚀 节点选择, type: selector, interrupt_exist_connections: true, outbounds: [ ♻️ 自动选择, 🟢 手动选择 ], filter: [ { action: all, keywords: '' } ] }
   - { tag: 🟢 手动选择, type: selector, interrupt_exist_connections: true, outbounds: [], filter: [ { action: all, keywords: '' } ] }
   - { tag: ♻️ 自动选择, type: urltest, interrupt_exist_connections: true, url: https://www.gstatic.com/generate_204, interval: 3m, tolerance: 150, outbounds: [], filter: [ { action: all, keywords: '' } ] }
   - { tag: 🍎 Apple, type: selector, interrupt_exist_connections: true, outbounds: [ 🟢 手动选择, ♻️ 自动选择 ], filter: [ { action: all, keywords: '' } ] }
+  - { tag: ✖️ X, type: selector, interrupt_exist_connections: true, outbounds: [ 🟢 手动选择, ♻️ 自动选择 ], filter: [ { action: all, keywords: '' } ] }
+  - { tag: 🌄 Instagram, type: selector, interrupt_exist_connections: true, outbounds: [ 🟢 手动选择, ♻️ 自动选择 ], filter: [ { action: all, keywords: '' } ] }
   - { tag: 🪟 Microsoft, type: selector, interrupt_exist_connections: true, outbounds: [ 🟢 手动选择, ♻️ 自动选择 ], filter: [ { action: all, keywords: '' } ] }
   - { tag: 🔍 Google, type: selector, interrupt_exist_connections: true, outbounds: [ 🟢 手动选择, ♻️ 自动选择 ], filter: [ { action: all, keywords: '' } ] }
   - { tag: 📹 YouTube, type: selector, interrupt_exist_connections: true, outbounds: [ 🟢 手动选择, ♻️ 自动选择 ], filter: [ { action: all, keywords: '' } ] }
@@ -62,7 +68,6 @@ outbounds:
   - { tag: 🎵 TikTok, type: selector, interrupt_exist_connections: true, outbounds: [ 🟢 手动选择, ♻️ 自动选择 ], filter: [ { action: all, keywords: '' } ] }
   - { tag: 🎥 Netflix, type: selector, interrupt_exist_connections: true, outbounds: [ 🟢 手动选择, ♻️ 自动选择 ], filter: [ { action: all, keywords: '' } ] }
   - { tag: 📲 Telegram, type: selector, interrupt_exist_connections: true, outbounds: [ 🟢 手动选择, ♻️ 自动选择 ], filter: [ { action: all, keywords: '' } ] }
-  - { tag: 🎯 全球直连, type: selector, interrupt_exist_connections: true, outbounds: [ 🎯 全局直连, 🚀 节点选择 ] }
   - { tag: 🪧 广告拦截, type: selector, interrupt_exist_connections: true, outbounds: [ 🚫 拒绝连接, 🎯 全局直连, 🚀 节点选择 ] }
   - { tag: 💧 泄漏拦截, type: selector, interrupt_exist_connections: true, outbounds: [ 🚫 拒绝连接, 🎯 全局直连, 🚀 节点选择 ] }
   - { tag: 🔎 HttpDNS, type: selector, interrupt_exist_connections: true, outbounds: [ 🚫 拒绝连接, 🎯 全局直连, 🚀 节点选择 ] }
