--- a/sss.yaml
+++ b/sss.yaml
@@ -27,33 +27,33 @@ route:
     - { rule_set: [ netflix_domain, netflix_ip ], outbound: 🎥 Netflix }
     - { rule_set: [ apple_domain, apple_ip ], outbound: 🍎 Apple }
     - { rule_set: [ google_domain, google_ip ], outbound: 🔍 Google }
-    - { rule_set: [ cn_domain ], outbound: 🎯 全局直连 }
+    - { rule_set: [ cn_domain ], outbound: 🎯 全球直连 }
     - { action: resolve }
-    - { rule_set: [ cn_ip ], outbound: 🎯 全局直连 }
+    - { rule_set: [ cn_ip ], outbound: 🎯 全球直连 }
   rule_set:
     # MetaCubeX 规则集
-    - { tag: ads_domain, type: remote, format: source, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/category-ads-all.srs, download_detour: 🎯 全局直连 }
-    - { tag: x_domain, type: remote, format: source, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/x.srs, download_detour: 🎯 全局直连 }
-    - { tag: instagram_domain, type: remote, format: source, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/instagram.srs, download_detour: 🎯 全局直连 }
-    - { tag: ai_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/category-ai-!cn.srs, download_detour: 🎯 全局直连 }
-    - { tag: youtube_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/youtube.srs, download_detour: 🎯 全局直连 }
-    - { tag: google_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/google.srs, download_detour: 🎯 全局直连 }
-    - { tag: telegram_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/telegram.srs, download_detour: 🎯 全局直连 }
-    - { tag: tiktok_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/tiktok.srs, download_detour: 🎯 全局直连 }
-    - { tag: netflix_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/netflix.srs, download_detour: 🎯 全局直连 }
-    - { tag: apple_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/apple.srs, download_detour: 🎯 全局直连 }
-    - { tag: microsoft_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/microsoft.srs, download_detour: 🎯 全局直连 }
-    - { tag: private_domain, type: remote, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/private.srs, format: binary, download_detour: 🎯 全局直连 }
-    - { tag: private_ip, type: remote, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geoip/private.srs, format: binary, download_detour: 🎯 全局直连 }    
-    - { tag: google_ip, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geoip/google.srs, download_detour: 🎯 全局直连 }
-    - { tag: telegram_ip, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geoip/telegram.srs, download_detour: 🎯 全局直连 }
-    - { tag: netflix_ip, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geoip/netflix.srs, download_detour: 🎯 全局直连 }
-    - { tag: apple_ip, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geoip/apple.srs, download_detour: 🎯 全局直连 }
-    - { tag: cn_domain, type: remote, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/cn.srs, format: binary, download_detour: 🎯 全局直连 }
-    - { tag: cn_ip, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geoip/cn.srs, download_detour: 🎯 全局直连 }
+    - { tag: ads_domain, type: remote, format: source, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/category-ads-all.srs, download_detour: 🎯 全球直连 }
+    - { tag: x_domain, type: remote, format: source, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/x.srs, download_detour: 🎯 全球直连 }
+    - { tag: instagram_domain, type: remote, format: source, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/instagram.srs, download_detour: 🎯 全球直连 }
+    - { tag: ai_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/category-ai-!cn.srs, download_detour: 🎯 全球直连 }
+    - { tag: youtube_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/youtube.srs, download_detour: 🎯 全球直连 }
+    - { tag: google_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/google.srs, download_detour: 🎯 全球直连 }
+    - { tag: telegram_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/telegram.srs, download_detour: 🎯 全球直连 }
+    - { tag: tiktok_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/tiktok.srs, download_detour: 🎯 全球直连 }
+    - { tag: netflix_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/netflix.srs, download_detour: 🎯 全球直连 }
+    - { tag: apple_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/apple.srs, download_detour: 🎯 全球直连 }
+    - { tag: microsoft_domain, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geosite/microsoft.srs, download_detour: 🎯 全球直连 }
+    - { tag: private_domain, type: remote, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/private.srs, format: binary, download_detour: 🎯 全球直连 }
+    - { tag: private_ip, type: remote, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geoip/private.srs, format: binary, download_detour: 🎯 全球直连 }    
+    - { tag: google_ip, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geoip/google.srs, download_detour: 🎯 全球直连 }
+    - { tag: telegram_ip, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geoip/telegram.srs, download_detour: 🎯 全球直连 }
+    - { tag: netflix_ip, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geoip/netflix.srs, download_detour: 🎯 全球直连 }
+    - { tag: apple_ip, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo-lite/geoip/apple.srs, download_detour: 🎯 全球直连 }
+    - { tag: cn_domain, type: remote, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/cn.srs, format: binary, download_detour: 🎯 全球直连 }
+    - { tag: cn_ip, type: remote, format: binary, url: https://jsd.onmicrosoft.cn/gh/MetaCubeX/meta-rules-dat@sing/geo/geoip/cn.srs, download_detour: 🎯 全球直连 }
     # senshinya 规则集
-    - { tag: stun_domain, type: remote, url: https://jsd.onmicrosoft.cn/gh/senshinya/singbox_ruleset@main/rule/STUN/STUN.srs, format: binary, download_detour: 🎯 全局直连 }
-    - { tag: blockhttpdns_domain, type: remote, url: https://jsd.onmicrosoft.cn/gh/senshinya/singbox_ruleset@main/rule/BlockHttpDNS/BlockHttpDNS.srs, format: binary, download_detour: 🎯 全局直连 }
+    - { tag: stun_domain, type: remote, url: https://jsd.onmicrosoft.cn/gh/senshinya/singbox_ruleset@main/rule/STUN/STUN.srs, format: binary, download_detour: 🎯 全球直连 }
+    - { tag: blockhttpdns_domain, type: remote, url: https://jsd.onmicrosoft.cn/gh/senshinya/singbox_ruleset@main/rule/BlockHttpDNS/BlockHttpDNS.srs, format: binary, download_detour: 🎯 全球直连 }
 outbounds:
   - { tag: 🚀 节点选择, type: selector, interrupt_exist_connections: true, outbounds: [ ♻️ 自动选择, 🟢 手动选择 ], filter: [ { action: all, keywords: '' } ] }
   - { tag: 🟢 手动选择, type: selector, interrupt_exist_connections: true, outbounds: [], filter: [ { action: all, keywords: '' } ] }
@@ -68,7 +68,7 @@ outbounds:
   - { tag: 🎵 TikTok, type: selector, interrupt_exist_connections: true, outbounds: [ 🟢 手动选择, ♻️ 自动选择 ], filter: [ { action: all, keywords: '' } ] }
   - { tag: 🎥 Netflix, type: selector, interrupt_exist_connections: true, outbounds: [ 🟢 手动选择, ♻️ 自动选择 ], filter: [ { action: all, keywords: '' } ] }
   - { tag: 📲 Telegram, type: selector, interrupt_exist_connections: true, outbounds: [ 🟢 手动选择, ♻️ 自动选择 ], filter: [ { action: all, keywords: '' } ] }
-  - { tag: 🪧 广告拦截, type: selector, interrupt_exist_connections: true, outbounds: [ 🚫 拒绝连接, 🎯 全局直连, 🚀 节点选择 ] }
-  - { tag: 💧 泄漏拦截, type: selector, interrupt_exist_connections: true, outbounds: [ 🚫 拒绝连接, 🎯 全局直连, 🚀 节点选择 ] }
-  - { tag: 🔎 HttpDNS, type: selector, interrupt_exist_connections: true, outbounds: [ 🚫 拒绝连接, 🎯 全局直连, 🚀 节点选择 ] }
+  - { tag: 🪧 广告拦截, type: selector, interrupt_exist_connections: true, outbounds: [ 🚫 拒绝连接, 🎯 全球直连, 🚀 节点选择 ] }
+  - { tag: 💧 泄漏拦截, type: selector, interrupt_exist_connections: true, outbounds: [ 🚫 拒绝连接, 🎯 全球直连, 🚀 节点选择 ] }
+  - { tag: 🔎 HttpDNS, type: selector, interrupt_exist_connections: true, outbounds: [ 🚫 拒绝连接, 🎯 全球直连, 🚀 节点选择 ] }
   ############ 全国家分组自动选择 ############  
